# knotty

./: README.md  pyproject.toml  test-manifest.toml
knot/: README.md  __init__.py  __main__.py  app.py  auth.py  config.py  ctx.py  error.py  main.py  pyproject.toml  spec.py  test-manifest.toml  util.py
knot/cmd/: package.py  user.py
knot/knot/: __init__.py  auth.py  manifest.py  util.py
knot/knot/cmd/: namespace.py  package.py  user.py
knot/knotty-client/: README.md
knot/knotty-client/knotty_client/: __init__.py
knot/knotty-client/knotty_client/models/: __init__.py  auth_token.py  error_model.py  namespace.py  namespace_create.py  namespace_edit.py  namespace_role_create.py  namespace_role_edit.py  namespace_user.py  not_found_error_model.py  package.py  package_brief.py  package_checksum.py  package_create.py  package_edit.py  package_version.py  package_version_create.py  package_version_edit.py  permission.py  user_info.py
knotty/: README.md  __init__.py  acl.py  alembic.ini  auth.py  config.py  db.py  error.py  knotty.toml  model.py  pyproject.toml  schema.py  storage.py
knotty-client/: pyproject.toml
knotty-client/knotty_client/api/default/: create_namespace.py  create_namespace_role.py  create_namespace_user.py  create_package.py  create_package_tag.py  create_package_version.py  delete_namespace.py  delete_namespace_role.py  delete_namespace_user.py  delete_package.py  delete_package_tag.py  delete_package_version.py  edit_namespace.py  edit_namespace_role.py  edit_namespace_user.py  edit_package.py  edit_package_tag.py  edit_package_version.py  get_namespace.py  get_namespace_role.py  (+8 more)
knotty-client/knotty_client/models/: already_exists_error_model.py  body_login_login_post.py  checksum_algorithm.py  knotty_info.py  message.py  namespace_role.py  namespace_user_create.py  namespace_user_edit.py  package_basic.py  package_dependency.py  package_tag.py  permission_code.py  unknown_dependencies_error_model.py  user_register.py
knotty/knotty/: acl.py  auth.py  config.py  db.py  schema.py
knotty/knotty/route/: namespace.py  package.py  permission.py
knotty/knotty/tests/: __init__.py  test_namespace.py
knotty/route/: namespace.py  package.py  permission.py  user.py
knotty/tests/: conftest.py  test_namespace.py  test_package.py
migrations/: env.py
migrations/versions/: 48da1a163968_create_initial_schema.py
(+17 files in other folders)
