[tool.poetry]
name = "knotty"
version = "0.1.0"
description = "A package repository"
authors = ["slowlime"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.9"
fastapi = "^0.95.0"
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
toml = "^0.10.2"
psycopg = "^3.1.9"
semver = "^3.0.0"
pydantic = {extras = ["email"], version = "^1.10.7"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.261"
alembic = "^1.11.1"
pytest = "^7.3.1"
httpx = "^0.24.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pytest-assert-utils = "^0.3.1"
pytest-unordered = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
